istio-1.25.2/istio-1.25.2/canary-deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: app-canary
spec:
  replicas: 1
  selector:
    matchLabels:
      app: app-canary
  template:
    metadata:
      labels:
        app: app-canary
    spec:
      containers:
      - name: app
        image: saifuddin337/app-canary:latest
        ports:
        - containerPort: 8080
---
apiVersion: v1
kind: Service
metadata:
  name: app-canary
spec:
  selector:
    app: app-canary
  ports:
  - port: 8080
    targetPort: 8080
