istio-1.25.2/istio-1.25.2/istio-virtualservice.yml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: app-virtualservice
spec:
  hosts:
  - "*"
  gateways:
  - app-gateway
  http:
  - route:
    - destination:
        host: app-stable
        port:
          number: 8080
      weight: 80
    - destination:
        host: app-canary
        port:
          number: 8080
      weight: 20
